--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>過去の授業内容リンク集</h1>
     <ul>
         <li>
-            <a href="./20220630/p1.html">6月30日の練習</a>
+            <a href="./20220630/p1.html">6月30日の練習問題1</a>
         </li>
 
         <li></li>
