--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="./20220630/p1.html">6月30日の練習問題1</a>
         </li>
 
-        <li></li>
+        <li><a href="./Kadai1/">プロフィールページ</a></li>
         
         <li></li>
         
