--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </ul>
 
             <ul>
-                <li><a href="./20220623/index5.html">6月23日の練習問題5です</a></li>
+                <li><a href="./20220623/index5.html">練習5</a></li>
             </ul>
 
         <li>6月30日</li>
