--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>過去の授業内容リンク集</h1>
+    <h1>Takuya.の過去の授業内容リンク集</h1>
     <ul>
 
         <li><a href="./Kadai1/">プロフィールページ</a></li>
