--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
                 <li><a href="./20220630/p1.html">練習</a></li>
             </ul>
     
+        <li>7月14日</li>
+            <ul>
+                <li><a href="./20220714/p1.html">練習</a></li>
+            </ul>
+            
     </ul>
 </body>
 </html>
