--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
                 <li><a href="./20220714/p1.html">練習</a></li>
             </ul>
         
+        <li>7月26日</li>
+            <ul>
+                <li><a href="./blog/index.html">授業制作ブログページ</a></li>
+            </ul>
     </ul>
 </div>
 </body>
